@@ -57,8 +57,7 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
       ignore_cvv: 'true',
       commerce_indicator: 'internet',
       user_po: 'ABC123',
-      taxable: true,
-      national_tax_indicator: 1
+      taxable: true
     }
 
     @subscription_options = {
@@ -248,7 +247,7 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
     assert_successful_response(authorize)
     assert adjust = @gateway_latam.adjust(@amount * 2, authorize.authorization, @options)
     assert_success adjust
-    assert capture = @gateway_latam.capture(@amount, authorize.authorization, @options)
+    assert capture = @gateway_latam.capture(@amount, authorize.authorization, @options.merge({ national_tax_indicator: 1 }))
     assert_successful_response(capture)
   end
 
@@ -262,7 +261,7 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
   def test_capture_and_void
     assert auth = @gateway.authorize(@amount, @credit_card, @options)
     assert_successful_response(auth)
-    assert capture = @gateway.capture(@amount, auth.authorization, @options)
+    assert capture = @gateway.capture(@amount, auth.authorization, @options.merge({ national_tax_indicator: 1 }))
     assert_successful_response(capture)
     assert void = @gateway.void(capture.authorization, @options)
     assert_successful_response(void)
@@ -271,7 +270,7 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
   def test_capture_and_void_with_elo
     assert auth = @gateway.authorize(@amount, @elo_credit_card, @options)
     assert_successful_response(auth)
-    assert capture = @gateway.capture(@amount, auth.authorization, @options)
+    assert capture = @gateway.capture(@amount, auth.authorization, @options.merge({ national_tax_indicator: 1 }))
     assert_successful_response(capture)
     assert void = @gateway.void(capture.authorization, @options)
     assert_successful_response(void)
@@ -317,6 +316,11 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
   def test_successful_purchase
     assert response = @gateway.purchase(@amount, @credit_card, @options)
     assert_successful_response(response)
+  end
+
+  def test_successful_purchase_with_national_tax_indicator
+    assert purchase = @gateway.purchase(@amount, @credit_card, @options.merge(national_tax_indicator: 1))
+    assert_successful_response(purchase)
   end
 
   def test_successful_purchase_with_issuer_additional_data
@@ -384,6 +388,11 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
     options = @options.merge(customer_id: '7500BB199B4270EFE05348D0AFCAD')
     assert response = @gateway.authorize(@amount, @credit_card, options)
     assert_successful_response(response)
+  end
+
+  def test_authorize_with_national_tax_indicator
+    assert authorize = @gateway.authorize(@amount, @credit_card, @options.merge(national_tax_indicator: 1))
+    assert_successful_response(authorize)
   end
 
   def test_successful_purchase_with_customer_id
@@ -510,7 +519,7 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
     assert auth = @gateway.authorize(@amount, @credit_card, @options)
     assert_successful_response(auth)
 
-    assert response = @gateway.capture(@amount, auth.authorization, @options)
+    assert response = @gateway.capture(@amount, auth.authorization, @options.merge({ national_tax_indicator: 1 }))
     assert_successful_response(response)
     assert !response.authorization.blank?
   ensure
@@ -521,14 +530,14 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
     assert auth = @gateway.authorize(@amount, @credit_card, @options)
     assert_successful_response(auth)
 
-    assert capture = @gateway.capture(@amount + 10, auth.authorization, @options)
+    assert capture = @gateway.capture(@amount + 10, auth.authorization, @options.merge({ national_tax_indicator: 1 }))
     assert_failure capture
     assert_equal 'The requested amount exceeds the originally authorized amount', capture.message
   end
 
   def test_failed_capture_bad_auth_info
     assert @gateway.authorize(@amount, @credit_card, @options)
-    assert capture = @gateway.capture(@amount, 'a;b;c', @options)
+    assert capture = @gateway.capture(@amount, 'a;b;c', @options.merge({ national_tax_indicator: 1 }))
     assert_failure capture
   end
 
@@ -601,7 +610,7 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
     assert_successful_response(auth)
 
     (1..20).each { |e| @options["mdd_field_#{e}".to_sym] = "value #{e}" }
-    assert capture = @gateway.capture(@amount, auth.authorization, @options)
+    assert capture = @gateway.capture(@amount, auth.authorization, @options.merge({ national_tax_indicator: 1 }))
     assert_successful_response(capture)
   end
 
@@ -624,7 +633,7 @@ class RemoteCyberSourceTest < Test::Unit::TestCase
     assert auth = @gateway.authorize(@amount, @credit_card, @options)
     assert_successful_response(auth)
 
-    capture_options = @options.merge(local_tax_amount: '0.17', national_tax_amount: '0.05')
+    capture_options = @options.merge(local_tax_amount: '0.17', national_tax_amount: '0.05', national_tax_indicator: 1)
     assert capture = @gateway.capture(@amount, auth.authorization, capture_options)
     assert_successful_response(capture)
   end
